# rules_kind

./: .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  def.bzl  deps.bzl  package.sh
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
internal/: BUILD  actions.bzl  delete.sh.template  rules.bzl
kind/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
kind/private/: BUILD.bazel  cluster.bzl  create_cluster.bzl  delete_cluster.bzl  local_registry.bzl  local_repository.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
kind/private/template/: BUILD.bazel  cluster.yaml.template  create.sh.template  delete.sh.template  local_registry.sh.template
kind/tests/: versions_test.bzl
test/: BUILD
