load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "rules",
    srcs = [
        "cluster.bzl",
        "create_cluster.bzl",
        "delete_cluster.bzl",
        "local_registry.bzl",
    ],
    visibility = ["//kind:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//kind:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//kind:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//kind:__subpackages__"],
)
